--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Original credits:
 
 Jarod Malestein <jarod@umich.edu>        Initial author
 Wesley Craig    <wes@umich.edu>          Initial author
-Derrick Brashear <shadow@dementia.org>   Apache2 support
+Daria Phoebe Brashear <dariaphoebe@auristor.com>   Apache2 support
 Sean Dilda <sean@duke.edu>               umich integration
 Adam Megacz <megacz@cs.berkeley.edu>     autoconf, debianization, maintainance
 
